less/home-page.less
// home

.hero {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 25%;
    // border: 1px solid red;
    
    .hero-text-and-image{
        display: flex;
        flex-direction: row;
        justify-content: center;
        margin-bottom: 2%;
        margin-top: 5%;
        width: 100%;


        .hero-text {
            display:flex;
            flex-direction: column;
            justify-content: center;
            text-align: center;
            // border: 1px solid red;
            margin-right: 7%;
            width: 405;
            h1 {
                font-size: 7.2rem;
                font-weight: bold;
                line-height: 6rem;
            }
            h2 {
                font-size: 6.4rem;
                color: @secondary-color;
                line-height: 6.5rem;
                margin-top:2.5%;
            }
        }//end hero-text

        img {
            // border: 1px solid green;
            width: 32%;
        }
    }//end hero-text-and-image



    .btn {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 60px;
        border: 4px solid @primary-color;
        font-size: 1.8rem;
        border-radius: 7px;
        text-decoration: none;
        color: @primary-color;
        font-size: 2.2rem;
        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); 
        width: 166px;
        border-radius: 10px;

        &:hover{
            background-color: @primary-color;
            color: white;
        }
        
    }

    p {
        font-size: 1.4rem;
        margin-top: 5px;

        a {
            text-decoration: none;
            color: #32708B;
        }
    }

    @media @desktop {
        .hero-text-and-image{
            .hero-text {
                
                margin: 0;
                margin-right: 5%;
                h1 {
                    font-size: 5rem;
                    font-weight: bold;
                    line-height: 3rem;
                
                }
                h2 {
                    font-size: 5rem;
                    color: @secondary-color;
                    line-height: 6rem;
                    margin-top:5%;
                }
            }//end hero-text
            img {
                border: 1px solid red;
            }
        }

        .btn {
            width: 166px;;
        }
    }

    @media (max-width: 724px ){
        margin-top: 3%;
        .hero-text-and-image {
            flex-direction: column;
            align-items: center;
        }
    }

    @media @phone {

        margin-top: 2.5%;
        // border: 1px solid blue;
        
        .hero-text-and-image {
            flex-direction: column;
            align-items: center;

            .hero-text {
                margin: 0;
                h1 {
                    font-size: 3.6rem;
                    font-weight: bold;
                    line-height: 3rem;
                }
                h2 {
                    font-size: 3.6rem;
                    color: @secondary-color;
                    line-height: 4rem;
                    margin-top:2.5%;
                }
            }//end hero-text

            img {
                margin-top: 2.5%;
                width: 45%;
            }
        }//end hero-text-and-image

        .btn {
            .custom-btn(@width: 27%, @height: 50px, @background-color: @primary-color, @font-color: #ffffff);
        }
    }//end mobile media query
}



// <------- Tolu's Landing Page code goes here ----->
//cards less here

//cards less here


//
@media @phone{
    .empty2{
        display:none;
    }
}

.words{
    .flex();

    //
    @media @phone{
        flex-direction: column;
        .empty{
            border: 20px solid #B4D6E4;
            width: 100%;
            margin-bottom:4rem;
        }   
    }

    //
    @media @tablet2{
        // border:2px solid red;
        flex-direction: column;
        margin:0 auto;
        align-items: center;
        max-width: 490px;    
    }
    .text{
        margin:0 0.5rem;

        //
        @media @phone{
            margin: 0 auto;      
        }

        //
        @media @desktop2{
            width: calc(100% / 3);
            display: flex;
            flex-direction: column;
        }
        img{
            max-width: 100%;
            height: auto;   
        }
        h2{
            text-align: center;
            color: @primary-color;

            //
            @media @tablet2{
                font-size:4.8rem;
            }
        }
        p{
            //
            @media @desktop2{
                width: 400px;
                margin: 0 auto;
                padding: 15px 20px;
            }
            text-align: center;
            color: @secondary-color;
            font-size:2.4rem;

            //
            @media @tablet2{
                font-size:2.9rem;
            }
        }
        .images{

            //
            @media @desktop2{
                max-width: 410px;
                margin: 0 auto;
            }
            display: flex;
            height:27rem;
            width:98%;
            margin:0 auto;  
            }

        //
        @media @tablet2{
            margin-bottom: 3rem;
            font-size:2rem;
                }
        }
}

//
.startbtn{
    display:flex;
    justify-content: center;
    margin-top:2rem;
    margin-bottom:10rem;
    button{
        height:6.1rem;
        width:16.6rem;  
        border-radius: 1rem;
        text-decoration: none;
        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); 
        .paraSignBtn(@btn-bg-color,@btnFontSize,@button-font-color);
        cursor: pointer;
        &:hover{
        background-color:lighten(@button-font-color,10%);
        transition: 0.7s ease-in-out;
        color:@primary-color;
                }
        } 
}

//
.Vbtn{
    display:none;
    
    //
    @media @phone{
    display:flex;
    justify-content: center;
    margin-top:2rem;
    margin-bottom:10rem;
    button{
        height:4.3rem;
        width:19.9rem;  
        border-radius: 0.9rem;
        text-decoration: none;
        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); 
        .paraSignBtn(@btn-bg-color,@btnFontSize,@button-font-color);
    &:hover{
        background-color:lighten(@button-font-color,10%);
        transition: 0.7s ease-in-out;
        color:@primary-color;
    }
    .fa-angle-down{
        font-size: 5rem;
        margin-bottom:10px;
    }
        } 
    }

}

 

